Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-104224

QWebEngineView print() with copyCount multiplies number of copies

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 6.4
    • 6.3.0
    • WebEngine
    • None
    • VS2022, Windows 11
    • Windows

    Description

      When printing multiple copies with QWebEngineView::print() (via QPrinter::copyCount) it multiplies the number of copies. I.E. if 2 copies are specified 4 copies print, 3 copies 9 prints, and so on.
      This is on 6.3.0 compiled from source on VS2022

      I've attached a test case that reproduces this.

      Steps to reproduce:
      Running the test case, after the webpage loads:
      1. Click print
      2. Select a printer (if default is not a the desired printer, PDF printers may not allow a quantity greater than 1)
      3. Ensure the number of copies is still 2
      4. Click Ok

      Expected Result:
      2 Copies of the website print

      Actual Result:
      4 Copies of the website print

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            davidsz Szabolcs David
            marcm Marc Micalizzi
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes